[package]
name = "webrtc_lib"
version = "0.1.0"
authors = ["WolverinDEV <git@teaspeak.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Using migrated repos from jorgebarreraa for full control
libnice = { git = "https://github.com/jorgebarreraa/rust-libnice.git" }
libusrsctp-sys = { git = "https://github.com/jorgebarreraa/rust-usrsctp-sys.git" }
libsrtp2-sys = { git = "https://github.com/jorgebarreraa/rust-srtp2-sys.git" }
rtp-rs = { git = "https://github.com/jorgebarreraa/rtp-rs.git" }
tokio-tungstenite = "0.11.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
serde_json = "1.0"
serde = { version = "1.0.116", features = ["derive"] }
webrtc-sdp = "0.3.6"
glib = "0.9"
retain_mut = "0.1.1"
openssl = "0.10.30"
lazy_static = "1.4.0"
libc = "0.2.79"
byteorder = "1.3.4"
rand = "0.7.3"
num = "0.3.0"
slog = { version = "2.5.2" }

[dev-dependencies]
tokio-test = "0.2.1"
slog-term = "2.6.0"

[dev-dependencies.slog]
version = "2.5.2"
features = ["release_max_level_trace", "max_level_trace"]

[features]
simulated-loss = []
